--- a/wp-content/themes/portfolio/src/css/header.css
+++ b/wp-content/themes/portfolio/src/css/header.css
@@ -3,13 +3,14 @@
 }
 
 body{
-    background-color: #C2C2C2;
+    background: rgba(40,66,143,1);
+    background: -moz-linear-gradient(left, rgba(40,66,143,1) 0%, rgba(195,206,239,1) 51%, rgba(40,66,143,1) 100%);
 }
 
 nav{
     width: 100%;
     display: flex;
-    background: #E5C589;
+    background: #E63946;
 }
 .ppricipale__list{
 
