--- a/wp-content/themes/portfolio/src/css/footer.css
+++ b/wp-content/themes/portfolio/src/css/footer.css
@@ -1,85 +1,94 @@
-footer{
-    font-family: "Cormorant Garamond" ;
-    background: #000000;
-    color: #fff;
-}
+footer {
+    font-family: Didot, 'arial', sans-serif;
+    background-color: #000000;
+    color: #ffffff;
 
-.logo-doré{;
-    max-width: 125px;
-    max-height: 125px;
-    width: 100%;
+}
+.footer__about{
+}
+.logo-doré{
+
+}
+.logo-doré{
+    width: 50%;
     height: auto;
-}
-
-.footer__title>h2{
-    font-size: 1.88rem;
-    font-weight: 400;
-    text-transform: uppercase;
-}
-.footer__title>p{
-    font-size: 1.88rem;
-    font-weight: 400;
-
+    margin: 25% -10%;
 }
 
 .footer__about{
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto  auto;
+    margin-top: -5%;
+    margin-left: 1%;
+    margin-bottom: -5%;
 }
 
-.navigation__title{
-    font-size: 1.88rem;
-    font-weight: 400;
+.footer__title,
+.footer__title__contact,
+.footer__navigations
+{
+    margin: 25% -30%;
 }
-.navigation__title>li{
-    font-size: 1.375em;
-    font-weight: 100;
+
+.footer__title>h2{
+    font-size: 3rem;
+    font-family: Didot;
+    margin-bottom: 2%;
+}
+.footer__title>p{
+    margin-bottom: 2%;
+}
+
+
+.navigation__title{
+    font-size: 3rem;
+    font-family: Didot;
+    margin-bottom: 1%;
+}
+.redirection{
+    font-size: 1rem;
+    font-family: Cormorant Garamond;
+    margin-bottom: 2.5%;
+    line-height: 5vh;
+}
+
+.footer__title__contact>h2{
+    font-size: 3rem;
+    font-family: Didot;
+    margin-bottom: 2%;
+}
+
+.footer__title__contact>a{
+    background-color: #C0002A;
+    color: white;
+    text-decoration: none;
+    padding: 1rem 12rem;
+    margin: auto;
 }
 
 .copyright{
-
-    background: #4F0000;
-    width: 100%;
+    background-color: #C0002A;
+    display: flex;
+    color: white;
+    height: 10vh;
 }
 
-.lien-contact{
-    text-decoration: none;
-    background: #F7D87F;
-    color: #000000;
+.reseauxSociaux:after{
+    content: url("/src/img/icons8-facebook-50.png");
 }
-.contact_title{
-    font-size: 1.88rem;
-    max-width: 200px;
-    margin: 10px;
-}
-.footer__title{
-    margin: 0 25%;
-}
-.lien-contact{
-    padding: 0.5em 2em;
-    background: #E63946;
-    color: #fff;
-    font-size: 1.375em;
-    font-weight: 400;
-    text-decoration: none;
-    border-radius: 10px;
-    margin: 10px;
-}
+.reseauxSociaux:hover{
+    background-color: white;
 
-.reseauxSociaux{
-    position: relative;
-    font-weight: 400;
 }
-.reseauxSociaux::after{
-    content: "\f082";
-    font-family: FontAwesome, serif;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    color: #000;
-    font-size: 18px;
-    padding-right: 0.5em;
-    position: absolute;
-    top: 10px;
-    left: 0;
+.copyright__title{
+    width: 75%;
+    font-size: 1rem;
+    align-items: center;
+    text-align: left;
+    margin: 1% 5%;
+    color: white;
+}
+.copyright__title>img{
+    align-items: center;
+
 }
