--- a/wp-content/themes/portfolio/src/css/header.css
+++ b/wp-content/themes/portfolio/src/css/header.css
@@ -3,61 +3,48 @@
 }
 
 body{
-    background: rgba(40,66,143,1);
-    background: -moz-linear-gradient(left, rgba(40,66,143,1) 0%, rgba(195,206,239,1) 51%, rgba(40,66,143,1) 100%);
+    background-color: #8C9CCD;
+    font-family: Didot;
+}
+h1{
+    display: none;
 }
 
-nav{
+nav {
     width: 100%;
-    display: flex;
     background: #E63946;
+    margin: 2% 0;
 }
-.ppricipale__list{
-
-}
-
-nav>ul:first-child{
-    text-align: center;
-}
-
-.pricipale__list>li{
-
-    display: inline;
-    margin: 0 10px;
-
-}
-li{
-    font-size: 1.938em;
-    display: inline;
-    font-family: "Cormorant Garamond";
-}
-nav ul:last-child{
+nav ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
     display: flex;
-    align-items: center;
-    background: #000000;
-    margin: auto;
 }
-.second__lien{
-    text-align: left;
-    margin-left: 10%;
+nav li{
+    width: auto;
+    height: auto;
+    padding: 1rem 2.5%;
+    color: white;
+    font-size: 1rem;
+    position: relative;
+    margin: auto 3%;
+}
 
-
-}
-
-.contact__liens{
-    color: #ffffff;
-}
-.header{
-    background: #000000;
-    width: 100%;
-    height: 70px;
-}
-h2{
+/* Séparateur particulier pour le dernier élément */
+nav li.redirection:last-child {
+    background-color: black;
+    clip-path: polygon(10% 0%, 100% 0%, 100% 100%, 0% 100%);
+    margin: 0 50%;
+    width: auto;
     text-align: center;
-    font-size: 3.125em;
-    background: #000000;
-    color: #ffffff;
-    font-family: "Didot";
-    width: 100%;
-    height: 10%;
+
+}
+nav a{
+    text-decoration: none;
+    color: white;
+}
+
+nav li.redirection:first-of-type{
+    font-weight: 800;
 }
