--- a/wp-content/themes/portfolio/src/css/header.css
+++ b/wp-content/themes/portfolio/src/css/header.css
@@ -17,24 +17,29 @@ nav {
 }
 nav ul{
     list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+    margin: auto 25%;
+   display: flex;
 }
 nav li{
+    display: inline;
     width: auto;
     height: auto;
     color: white;
     font-size: 1rem;
-    position: relative;
-    margin: auto 3%;
+    margin: auto 7%;
+}
+nav li:hover{
+    background-color: black;
+    color: white;
+    border-bottom: 1px solid white;
 }
 
 /* Séparateur particulier pour le dernier élément */
 nav li.redirection:last-child {
     background-color: black;
     clip-path: polygon(10% 0%, 100% 0%, 100% 100%, 0% 100%);
-    margin: 0 50%;
+    margin: 0 54%;
+    padding: 2% 15% !important;
     width: auto;
     text-align: center;
 
@@ -42,8 +47,4 @@ nav li.redirection:last-child {
 nav a{
     text-decoration: none;
     color: white;
-}
-
-nav li.redirection:first-of-type{
-    font-weight: 800;
 }
