--- a/wp-content/themes/portfolio/src/css/footer.css
+++ b/wp-content/themes/portfolio/src/css/footer.css
@@ -8,15 +8,9 @@ footer {
 
 p{
     font-family: "Cormorant Garamond";
-    font-weight: 100;
 }
 
-.footer__about{
-}
-.logo-doré{
-
-}
-.logo-doré{
+.logo__dore__footer{
     width: 90%;
     height: auto;
     margin: 1% -5%;
@@ -25,17 +19,16 @@ p{
 .footer__about{
     display: grid;
     grid-template-columns: auto auto auto  auto;
-    margin-top: -5%;
-    margin-left: 1%;
-    margin-bottom: -5%;
-    grid-gap: 5%;
+margin: -3% 0 ;
+    height: auto;
+    grid-gap: 2.5%;
+    align-items: center;
 }
 
 .footer__title,
 .footer__title__contact,
 .footer__navigations
 {
-    margin: 25% -30%;
 }
 
 .footer__title>h2{
@@ -47,6 +40,8 @@ p{
 .footer__title>p{
     margin-bottom: 5%;
     font-size: 1.5rem;
+    font-weight: 100;
+
 }
 
 
@@ -71,10 +66,14 @@ p{
 
 }
 
+.footer__title__contact{
+    margin-bottom: 20%;
+}
+
 .footer__title__contact>h2{
     font-size: 3rem;
     font-family: Didot;
-    margin-bottom: 2%;
+    margin-bottom: 5%;
 }
 
 .footer__title__contact>a{
@@ -82,7 +81,7 @@ p{
     color: white;
     text-decoration: none;
     padding: 1rem 12rem;
-    margin: auto;
+    margin: 10% 0;
     -webkit-box-shadow: 5px 6px 14px 2px rgba(255,255,255,0.55);
     box-shadow: 5px 6px 14px 2px rgba(255,255,255,0.55);
 }
@@ -97,6 +96,7 @@ p{
     display: flex;
     color: white;
     height: 10vh;
+    margin: 5% 0;
 }
 
 .copyright__title{
@@ -107,7 +107,4 @@ p{
     margin: 1% 5%;
     color: white;
 }
-.copyright__title>img{
-    align-items: center;
 
-}
