--- a/wp-content/themes/portfolio/src/css/contact.css
+++ b/wp-content/themes/portfolio/src/css/contact.css
@@ -3,7 +3,7 @@ body{
     font-family: Didot;
 }
 
-h1{
+.form__titile{
     text-align: center;
     font-size: 3rem;
     background-color: black;
@@ -14,10 +14,12 @@ h1{
     height: auto;
 }
 
-h2{
-    font-size: 2rem;
+h3{
+    font-family: Zapfino;
+    font-size: 1.5rem;
     margin-bottom: 2%;
-    font-weight: 700;
+    font-weight: 200;
+    font-style: italic;
 }
 
 .contact{
@@ -25,13 +27,16 @@ h2{
 }
 
 .titile__bloc__form{
-    font-style: italic;
-    font-size: 2.5rem
+
 }
 
 .info__form{
     margin-left: 10%;
-    margin-bottom: 5%;
+    margin-bottom: 1%;
+}
+.info__form p{
+    font-family: Cormorant Garamond;
+    font-style: italic;
 }
 
 .text__form{
@@ -53,6 +58,7 @@ h2{
 .form__elements>label{
     display: block;
     margin-bottom: 1%;
+
 }
 #form__sujet>label{
     background-color: black;
@@ -65,7 +71,13 @@ h2{
 
 textarea{
     background-color: black;
-    color: #E5C589;
+    color: white;
+    border: 1px solid #E5C589;
+    width: 100%;
+    height: 100px;
+    resize: none;
+    padding: 2%;
+    margin-bottom: 5%;
 }
 
 span{
@@ -80,49 +92,55 @@ input:hover{
     background-color: white;
     color: black;
 }
+
+#subjetMessage{
+    background-color: black;
+    color: white;
+}
 button{
     background-color: #E63946;
     color: white;
     border: none;
     padding: 2% 5%;
+    border-radius: 0.5rem;
+    -webkit-box-shadow: 5px 10px 23px -1px rgba(255,255,255,0.69);
+    box-shadow: 5px 10px 23px -1px rgba(255,255,255,0.69);
+
 }
 button:hover{
     background-color: #C0002A;
 }
 .coordonnees{
-    width: 75%;
+    width: 100%;
     height: auto;
 
 }
 .coordonnee__info{
     margin-bottom: 2%;
-    width: 50%;
-}
-.coordonnee__info:first-of-type{
-    border-bottom: 1px solid black;
-}
-.apps>li{
-    display: inline;
-    margin: 0 2%;
-}
-li>img{
-    width: 25%;
-    height: 50%;
-}
-
-#email{
-    border-bottom: 1px solid black;
-}
+    }
 #email::before{
     content: url("../img/icone-email.png");
+    display: inline-block; /* Important pour appliquer width/height */
+    transform: scale(0.8); /* Alternative pour redimensionner */
+    vertical-align: middle; /* Alignement vertical */
+    margin-right: 8px; /* Espacement à droite */
+    position: relative;
 }
-#number__tel{
 
-}
 #number__tel::before{
     content: url("../img/icone-tel.png");
+    display: inline-block; /* Important pour appliquer width/height */
+    transform: scale(0.8); /* Alternative pour redimensionner */
+    vertical-align: middle; /* Alignement vertical */
+    margin-right: 8px; /* Espacement à droite */
+    position: relative;
 }
 #adresse::before{
     content: url("../img/icone-maps.png");
+    display: inline-block; /* Important pour appliquer width/height */
+    transform: scale(0.8); /* Alternative pour redimensionner */
+    vertical-align: middle; /* Alignement vertical */
+    margin-right: 8px; /* Espacement à droite */
+    position: relative;
 
 }
