--- a/wp-content/themes/portfolio/src/css/Single-Project.css
+++ b/wp-content/themes/portfolio/src/css/Single-Project.css
@@ -6,6 +6,15 @@
     padding: 1rem;
     text-align: center;
 }
+
+body, a, button {
+    cursor: url('../img/balle-icone.png'), auto;
+}
+
+a:hover, button:hover {
+    cursor: url('../img/balle-icone.png'), pointer;
+}
+
 .titile__Proget__detailler{
     font-size: 2rem;
     font-style: italic;
@@ -18,7 +27,7 @@
     font-weight: 700;
     font-style: italic;
     margin-left: 5%;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 .projet__text p{
     margin-left: 5%;
@@ -28,25 +37,19 @@
     display: grid;
     grid-template-columns: auto auto;
     margin: 5%;
-    align-content: center;
-    align-items: center;
+    align-items: start;
+    /*align-content: center;*/
 }
-.projet__info h2{
-    font-size: 2rem;
-    font-style: italic;
-}
+
 
 .image-projet{
-    margin-left: -1%;
-    margin-top: -50%;
+    margin-top: -30%;
 }
 
+
 .image-projet img{
-    max-width: 510px;
     width: 100%;
-    height: auto; !important;
-    margin-top: -5%;
-    width: auto; /* Maintient le ratio */
+    height: auto;
     object-fit: cover; /* Recadre l'image sans la déformer */
 }
 .projet__text{
@@ -69,4 +72,32 @@
     background-color: #590013;
 
 
+}
+
+.scroll-indicator {
+    text-align: center;
+}
+.scroll-indicator p{
+    margin-bottom: 2%;
+    font-size: 3rem;
+    font-style: italic;
+    font-weight: 800;
+}
+
+.scroll-indicator img {
+    animation: bounce 2s infinite;
+    width: 3%;
+    height: auto;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
+    }
 }
