--- a/wp-content/themes/portfolio/src/css/accueil.css
+++ b/wp-content/themes/portfolio/src/css/accueil.css
@@ -4,6 +4,13 @@ body{
     font-size: 16px;
 
 }
+body, a, button {
+    cursor: url('../img/balle-icone.png'), auto;
+}
+
+a:hover, button:hover {
+    cursor: url('../img/balle-icone.png'), pointer;
+}
 
 a{
     cursor: pointer;
@@ -87,6 +94,36 @@ h3{
     padding: 1.5rem;
     font-weight: 100;
 }
+
+
+.scroll-indicator {
+    text-align: center;
+}
+.scroll-indicator p{
+    margin-bottom: 2%;
+    font-size: 3rem;
+    font-style: italic;
+    font-weight: 800;
+}
+
+.scroll-indicator img {
+    animation: bounce 2s infinite;
+    width: 3%;
+    height: auto;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
+    }
+}
+
 
 .acceuille__about__me{
     font-family: 'Didot';
