--- a/wp-content/themes/portfolio/src/css/header.css
+++ b/wp-content/themes/portfolio/src/css/header.css
@@ -4,7 +4,7 @@
 
 body{
     background-color: #8C9CCD;
-    font-family: Didot;
+    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Times New Roman, serif;
 }
 h1{
 }
@@ -26,6 +26,7 @@ nav li{
     color: white;
     font-size: 1rem;
     margin: auto 7%;
+    padding: 1rem;
 }
 nav li:hover{
     border-bottom: 1px solid white;
@@ -35,11 +36,13 @@ nav li:hover{
 nav li.redirection__header:last-child {
     background-color: black;
     clip-path: polygon(10% 0%, 100% 0%, 100% 100%, 0% 100%);
-    margin: 0 56%;
-    padding: 2% 15% !important;
+    margin: 0 45%;
+    padding: 3% 20% !important;
     width: auto;
     text-align: center;
-
+}
+nav li.redirection__header:last-child:hover{
+    border: none;
 }
 nav a{
     text-decoration: none;
