--- a/wp-content/themes/portfolio/src/css/projets.css
+++ b/wp-content/themes/portfolio/src/css/projets.css
@@ -98,6 +98,14 @@
     background-color: #8c95cb; /* fond bleu mauve */
     font-family: 'Georgia', serif;
 }
+body, a, button {
+    cursor: url('../img/balle-icone.png'),  auto;
+}
+
+a:hover, button:hover {
+    cursor: url('../img/balle-icone.png'), pointer;
+}
+
 
 /* Titre principal */
 .projets-titre {
@@ -168,7 +176,8 @@
     color: #e6c87b;
     font-weight: bold;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1rem;
+    padding: 0.5rem 0;
 }
 
 .carte-lien:hover {
@@ -183,5 +192,33 @@
     .carte {
         width: 100%;
         max-width: 400px;
+    }
+}
+
+.scroll-indicator {
+    text-align: center;
+}
+.scroll-indicator p{
+    margin-bottom: 2%;
+    font-size: 3rem;
+    font-style: italic;
+    font-weight: 800;
+}
+
+.scroll-indicator img {
+    animation: bounce 2s infinite;
+    width: 3%;
+    height: auto;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
     }
 }
